tests/valid/expr.knv
fn main() -> void {
    mut bar = (4 + 4) * 2;
    bar = bar - 4 * 2;
    let foo = bar ** 2;
    exit foo % 13;
}
