tests/errors/redefinition.knv
fn main() -> void {
    let x = 5;
    let x = 10;
    exit x;
}
